{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "5633b6b1-6efc-4c66-84b4-142c179531e9",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "f5072518-1dda-4cfc-8d7f-45307dccaa41",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "0dfdb232-e5a6-4892-8350-0f600a3d59eb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "00310708-37e5-42d9-baac-688784a0b963",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a99e8fd1-5e4d-4c22-84b0-11ee3a766a3e",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}